src/components/app.css
.link{
  color: rgba(171, 48, 48, 1);
  text-decoration: none;
  font-size: 15px;
}

.link:hover{
  background-color: rgba(149, 156, 155, .5);
}

h2{
  font-family: 'Marck Script', cursive;
  font-size: 22px;
  font-weight: bold;
}

.expand-collapse-button{
  background: transparent;
  border-radius: 50%;
  border: solid black 1px;
}

.expand-collapse-button:hover{
  background: black;
  color: white;
}

body{
  font-family: 'Kodchasan', sans-serif;
  font-size: 12px;
}

.app{
  max-width: 1000px;
  margin: 0 auto;
}
.errorDisplay{
  color: red;
  border: 2px solid red;
}

@media only screen and (min-width: 640px){
  h2{
    font-size: 28px;
  }
  body{
    font-size: 17px;
  }
  .link{
    font-size: 20px;
  }
}

